# tatca

./: Cargo.toml  README.md  state.json
css/: base.css  main.css
javascript/: main.js
migrations/2022-02-28-091445_create_to_do_items/: up.sql
migrations/2022-02-28-151101_create_users/: up.sql
src/: database.rs  main.rs  processes.rs  state.rs
src/json_serialization/: to_do_items.rs
src/models/item/: item.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/: mod.rs  path.rs  token.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
src/views/users/: create.rs  mod.rs
templates/: main.html
templates/components/: header.css
